manifests/homepage/homepage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
