manifests/homepage/homepage-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homepage
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mt165.co.uk
    http:
      paths:
      - backend:
          serviceName: homepage
          servicePort: http
  - host: www.mt165.co.uk
    http:
      paths:
      - backend:
          serviceName: homepage
          servicePort: http
